--- a/public/css/main.css
+++ b/public/css/main.css
@@ -264,6 +264,13 @@ mark {
   height: 46px;
   padding-left: calc(43px);
 }
+
+.input-container i {
+  font-size: 13px;
+  width: 46px;
+  height: 46px;
+}
+
 .input-container button {
   margin: 0;
   line-height: 1.15;
@@ -495,6 +502,12 @@ mark {
   align-items: flex-start;
   position: relative;
 }
+.subscribe-form .input-group i {
+  width: 42px;
+  height: 42px;
+}
+
+
 .subscribe-form .input-group input {
   margin: 0px;
   line-height: 1.15;
@@ -738,24 +751,50 @@ mark {
 
 
 .menu-container {
-  position: relative;
+  display: flex;
+  align-items: center;
+  width: 220px;
+  height: 150px;
+  font-weight: normal;
+  text-align: left;
+  cursor: pointer;
+  border-radius: 1px;
+  color: rgb(51, 51, 51);
+  border: 1px solid rgb(204, 204, 204);
+  background: #ffffff;
+  position: fixed;
+  transform: translate(-210px, 10px);
 }
 
-.menu-popup {
-  top: 30px; /* Adjust this value according to your layout */
-  right: 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  padding: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+.menu-container li {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  padding-inline: 5px;
 }
 
-.menu-item {
-  margin-bottom: 5px;
+.menu-container div {
+  width: 100%;
+  height: 100%;
+  display: inline-flex;
+  align-items: center;
+  flex-grow: 1;
+}
+.menu-container .menu {
+  display: grid;
+  margin: 0px;
+  grid-template-columns: repeat(2, 1fr);
 }
 
-.menu-item label {
-  margin-left: 5px;
+.menu-container span {
+  font: 13px / 14.95px "Space Mono", monospace, system-ui, -apple-system,
+    BlinkMacSystemFont, "avenir next", avenir, "segoe ui", "helvetica neue",
+    helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
 }
+.menu-container input {
+  padding-left: 50px;
+}
+
+
 
 
